[gd_scene load_steps=2 format=3 uid="uid://bhvu2n4ee1ljo"]

[ext_resource type="Script" path="res://addons/realtimecollaboration/mainscreen/main_screen.gd" id="1_2ubtu"]

[node name="main_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ubtu")

[node name="vbx_nickname" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 52.0
offset_top = 30.0
offset_right = -53.0
offset_bottom = 127.0
grow_horizontal = 2

[node name="lb_nicknane" type="Label" parent="vbx_nickname"]
layout_mode = 2
text = "Nickname"
horizontal_alignment = 1

[node name="ln_nickname" type="LineEdit" parent="vbx_nickname"]
layout_mode = 2

[node name="vbx_host" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 62.0
offset_top = 159.0
offset_right = 564.0
offset_bottom = -223.0
grow_vertical = 2

[node name="vbx_nickname3" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 586.0
offset_top = 159.0
offset_right = 1088.0
offset_bottom = -237.0
grow_vertical = 2

[node name="ln_client_ip" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 586.0
offset_top = 213.0
offset_right = 951.0
offset_bottom = 244.0

[node name="ln_client_port" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 966.0
offset_top = 213.0
offset_right = 1088.0
offset_bottom = 244.0

[node name="btn_start_host" type="Button" parent="."]
layout_mode = 2
offset_left = 106.0
offset_top = 339.0
offset_right = 276.0
offset_bottom = 378.0
text = "Start host"

[node name="btn_stop_host" type="Button" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 338.0
offset_right = 500.0
offset_bottom = 377.0
text = "Stop host"

[node name="btn_join_client" type="Button" parent="."]
layout_mode = 0
offset_left = 611.0
offset_top = 335.0
offset_right = 781.0
offset_bottom = 374.0
text = "Join"

[node name="btn_disconnect_client" type="Button" parent="."]
layout_mode = 0
offset_left = 835.0
offset_top = 334.0
offset_right = 1005.0
offset_bottom = 373.0
text = "Disconnect"

[node name="lb_host" type="Label" parent="."]
layout_mode = 2
offset_left = 62.0
offset_top = 159.0
offset_right = 564.0
offset_bottom = 182.0
text = "Host:"
horizontal_alignment = 1

[node name="lb_port" type="Label" parent="."]
layout_mode = 2
offset_left = 62.0
offset_top = 186.0
offset_right = 564.0
offset_bottom = 209.0
text = "Port"

[node name="ln_host_port" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 62.0
offset_top = 213.0
offset_right = 564.0
offset_bottom = 244.0

[node name="lb_client" type="Label" parent="."]
layout_mode = 2
offset_left = 586.0
offset_top = 159.0
offset_right = 1088.0
offset_bottom = 182.0
text = "Client:"
horizontal_alignment = 1

[node name="lb_ipport" type="Label" parent="."]
layout_mode = 2
offset_left = 586.0
offset_top = 186.0
offset_right = 1088.0
offset_bottom = 209.0
text = "IP addres / Port"

[node name="btn_update_peer_list" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 284.0
offset_top = 491.0
offset_right = 406.0
offset_bottom = 552.0
text = "Actualizar lista
"

[node name="txe_peers" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 485.0
offset_top = 449.0
offset_right = 894.0
offset_bottom = 594.0

[node name="btn_test" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 132.0
offset_top = 506.0
offset_right = 227.0
offset_bottom = 541.0
text = "Toggle real"

[node name="btn_test_2" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 131.0
offset_top = 466.0
offset_right = 224.0
offset_bottom = 494.0
text = "test
"

[connection signal="pressed" from="btn_start_host" to="." method="_on_btn_start_host_pressed"]
[connection signal="pressed" from="btn_stop_host" to="." method="_on_btn_stop_host_pressed"]
[connection signal="pressed" from="btn_join_client" to="." method="_on_btn_join_client_pressed"]
[connection signal="pressed" from="btn_disconnect_client" to="." method="_on_btn_disconnect_client_pressed"]
[connection signal="pressed" from="btn_update_peer_list" to="." method="_on_btn_update_peer_list_pressed"]
[connection signal="pressed" from="btn_test" to="." method="_on_btn_test_pressed"]
[connection signal="pressed" from="btn_test_2" to="." method="_on_btn_test_2_pressed"]
